--- a/signup.html
+++ b/signup.html
@@ -15,6 +15,14 @@
       margin: 0;
       background-color: #f4f4f4;
     }
+    .logo {
+      margin-bottom: 20px;
+    }
+    .logo img {
+      /* border-radius: 8px; */
+      height: 100px;
+      width: 300px;
+    }
     .container {
       width: 300px;
       padding: 20px;
