--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
     <div id="errorMessage" class="alert alert-danger mt-3 d-none" role="alert"></div>
-    <div class="signup-link">
+<!--     <div class="signup-link">
       <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
-    </div>
+    </div> -->
   </div>
 
   <script>
