--- a/app.html
+++ b/app.html
@@ -52,6 +52,10 @@
     <div id="tables-container" class="table-responsive"></div>
     <div id="sql" class="narrative mx-auto my-3"></div>
     <div id="result" class="table-responsive container mx-auto"></div>
+    <div id="chart-container" class="container my-3">
+      <canvas id="chart"></canvas>
+    </div>
+    <pre id="chart-code" class="narrative mx-auto my-3"></pre>
   </div>
 
   <footer class="my-5 vh-100 d-flex align-items-center justify-content-center">
