--- a/app.html
+++ b/app.html
@@ -1,120 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <title>DataChat</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #f4f4f4;
-    }
-    .logo {
-      margin-bottom: 20px;
-    }
-    .logo img {
-      /* border-radius: 8px; */
-      height: 100px;
-      width: 300px;
-    }
-    .container {
-      width: 300px;
-      padding: 20px;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    .container h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .signup-link {
-      text-align: center;
-      margin-top: 10px;
-    }
-    .signup-link a {
-      color: #007BFF;
-      text-decoration: none;
-    }
-    .signup-link a:hover {
-      text-decoration: underline;
-    }
-    .input-group-text {
-      cursor: pointer;
+    .narrative {
+      max-width: 40rem;
     }
   </style>
 </head>
+
 <body>
-  <div class="logo">
-    <img src="image.png" alt="Logo">
-  </div>
-  <div class="container">
-    <h2>Login</h2>
-    <form id="loginForm">
-      <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
-        <input type="text" class="form-control" id="username" name="username" required>
-      </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <div class="input-group">
-          <input type="password" class="form-control" id="password" name="password" required>
-          <span class="input-group-text" id="password-eye">
-            <i class="fas fa-eye"></i>
-          </span>
+
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href=".">DataChat</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="nav-item dropdown ms-auto" role="group" aria-label="Toggle dark mode" title="Toggle Dark Mode">
+          <button class="dark-theme-toggle btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Toggle theme (auto)">
+            <i class="bi bi-circle-half"></i> <span class="d-lg-none ms-2">Toggle theme</span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><button class="dropdown-item" data-bs-theme-value="light"><i class="me-2 bi bi-sun-fill"></i> Light</button></li>
+            <li><button class="dropdown-item" data-bs-theme-value="dark"><i class="me-2 bi bi-moon-stars-fill"></i> Dark</button></li>
+            <li><button class="dropdown-item" data-bs-theme-value="auto"><i class="me-2 bi bi-circle-half"></i> Auto</button></li>
+          </ul>
         </div>
       </div>
-      <button type="submit" class="btn btn-primary w-100">Login</button>
-    </form>
-    <div id="errorMessage" class="alert alert-danger mt-3 d-none" role="alert"></div>
-    <!-- <div class="signup-link">
-      <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
-    </div> -->
+    </div>
+  </nav>
+
+  <div class="container-fluid">
+    <h1 class="display-1 my-4 text-center">DataChat</h1>
+    <h2 class="display-6 text-center">Talk to your dataset</h2>
+    <div class="mx-auto my-3 narrative">
+    </div>
+
+    <div class="container">
+      <div id="demos" class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 my-5 justify-content-center"></div>
+    </div>
+
+    <form id="upload" class="mt-5 mx-auto narrative"></form>
+
+    <div id="tables-container" class="table-responsive"></div>
+    <div id="sql" class="narrative mx-auto my-3"></div>
+    <div id="result" class="table-responsive container mx-auto"></div>
   </div>
 
-  <script>
-    // Toggle password visibility
-    const passwordInput = document.getElementById('password');
-    const passwordEyeIcon = document.getElementById('password-eye');
-    
-    passwordEyeIcon.addEventListener('click', () => {
-      if (passwordInput.type === 'password') {
-        passwordInput.type = 'text';
-        passwordEyeIcon.innerHTML = '<i class="fas fa-eye-slash"></i>';
-      } else {
-        passwordInput.type = 'password';
-        passwordEyeIcon.innerHTML = '<i class="fas fa-eye"></i>';
-      }
-    });
+  <footer class="my-5 vh-100 d-flex align-items-center justify-content-center">
+    <h1 class="display-4">Designed by <a href="https://gramener.com/" class="text-reset link-offset-3 link-underline link-underline-opacity-25">Gramener</a></h1>
+  </footer>
 
-    // Handle form submission
-    document.getElementById('loginForm').addEventListener('submit', async function(e) {
-      e.preventDefault();
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
+  <div class="toast-container position-fixed top-0 end-0 p-3">
+    <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+        <i class="bi bi-info-circle-fill toast-icon me-2"></i>
+        <strong class="me-auto toast-title"></strong>
+        <small class="toast-time"></small>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+      <div class="toast-body"></div>
+    </div>
+  </div>
 
-      // Fetch credentials.csv and validate
-      const response = await fetch('credentials.csv');
-      const text = await response.text();
-      const rows = text.split('\n').map(row => row.split(','));
-      const isValid = rows.some(row => row[0] === username && row[1] === password);
-
-      if (isValid) {
-        window.location.href = 'app.html';
-      } else {
-        const errorMessage = document.getElementById('errorMessage');
-        errorMessage.textContent = 'Invalid credentials!';
-        errorMessage.classList.remove('d-none');
-      }
-    });
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" type="module"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@gramex/ui@0.3/dist/dark-theme.js" type="module"></script>
+  <script src="../static/script.js" type="module"></script>
 </body>
+
 </html>
